<resources>
    <string name="title_activity_citrus">CitrusActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_my_cash">My Cash</string>
    <string name="text_wallet_promotion">Pay with your wallet and get exciting offers and
        cashbacks!
    </string>
    <string name="text_setup_your_wallet">Setup Your Wallet</string>
    <string name="text_setup_your_wallet_now">Setup Your Wallet Now</string>
    <string name="text_credit_debit">Credit/Debit Cards</string>
    <string name="text_credit_debit_promotion">PAY WITH A CREDIT OR DEBIT CARD</string>
    <string name="text_net_banking">Net Banking</string>
    <string name="text_other_banks">SELECT OTHER BANKS</string>
    <string name="text_shopmatic_tores">Shopmatic Stores</string>
    <string name="text_your_balance">Your Balance</string>
    <string name="rs">\u20B9</string>
    <string name="text_my_cards">My Cards</string>
    <string name="text_pay_now">Pay Now</string>
    <string name="text_add_money_pay"><![CDATA[ADD MONEY & PAY NOW]]></string>
    <string name="text_card_holder">CARD HOLDER</string>
    <string name="text_valid_lable">VALID THRU</string>
    <string name="text_enter_cvv">Enter CVV</string>
    <string name="hint_card_number">CARD NUMBER</string>
    <string name="hint_owner_name">NAME AS ON CARD</string>
    <string name="text_add_card">Add Card</string>
    <string name="text_expiry">EXPIRY</string>
    <string name="text_save_card">Save this card</string>
    <string name="text_save_card_description">Save this card and you won’t have to enter these
        details again!
    </string>
    <string name="text_payment_success">Payment Successful</string>
    <string name="text_payment_failure">Payment Failure</string>
    <string name="text_transaction_id">Transaction ID</string>
    <string name="text_error_transaction_id">Error ID</string>
    <string name="text_amount_paid">Amount Paid</string>
    <string name="text_error_message">Error Message</string>
    <string name="text_wallet_switch">
        <![CDATA[You can try our wallet for cashless payments & get exciting offers]]></string>
    <string name="thanks_text">Thanks! We\’d love to see you again :)</string>
    <string name="text_go_to_my_wallet">GOTO MY WALLET</string>
    <string name="text_retry_transaction">Retry Transaction</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_error">Error</string>
    <string name="text_all_done">All Done</string>
    <string name="text_make_payment">Make Payment</string>
    <string name="app_title">Citrus Pay SDK UI</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_debit_card">Debit Card</string>
    <string name="err_card_no_empty">Please enter card number.</string>
    <string name="err_owner_name_empty">Please enter card owner name.</string>
    <string name="err_select_month">Please select an expiry month.</string>
    <string name="err_select_month_future">Please select an expiry month in the future.</string>
    <string name="err_select_year">Please select an expiry year</string>
    <string name="text_bank_list">Net banking options</string>
    <string name="text_getting_bank_list">Loading bank list</string>
    <string name="text_saving_card">Saving your card</string>
    <string name="text_wallet_signin">
        <![CDATA[Go Cashless with Citrus & Make Payments in a Jiffy!]]></string>
    <string name="hint_email">EMAIL ADDRESS</string>
    <string name="hint_phone_no">PHONE NUMBER</string>
    <string name="text_get_started">GET STARTED</string>
    <string name="text_my_wallet">My Wallet</string>
    <string name="ok_got_it">OK, GOT IT!</string>
    <string name="text_login_dialog_title">Already have a citrus account?</string>
    <string name="text_login_dialog_message">If you already have a Citrus account, then enter
        registered details&#8230;
    </string>
    <string name="text_mobile_match_found">Congratulations, we have found a Citrus account which
        matches this mobile number
    </string>
    <string name="text_email_match_found">Citrus account matching this email address found
    </string>
    <string name="text_enter_otp_mobile">Please enter the OTP that you have received on this mobile
        number
    </string>
    <string name="hint_mobile_otp">MOBILE OTP</string>
    <string name="text_resend_otp">RE-SEND OTP</string>
    <string name="text_otp_auto_populated">We have auto-populated your OTP</string>
    <string name="hint_email_otp">EMAIL OTP</string>
    <string name="hint_citrus_pass">ENTER CITRUS PASSWORD</string>
    <string name="text_email_otp_sent">An email OTP has been sent to</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_or">OR</string>
    <string name="text_signup_confirm">We are creating a Citrus account for you with the following
        details
    </string>
    <string name="text_change">CHANGE</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_verify_mobile">If you would like to verify your mobile number, please enter
        the OTP that we have sent to your mobile :
    </string>
    <string name="text_verify">Verify</string>
    <string name="text_i">i</string>
    <string name="text_add_money">Add money</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_withdraw_money">Withdraw Money</string>
    <string name="text_manage_saved_cards">Manage Saved Cards</string>
    <string name="text_FAQ">FAQs</string>
    <string name="text_add_money_wallet">Add money to your wallet</string>
    <string name="hint_enter_amount">Enter amount</string>
    <string name="plus_100">+100</string>
    <string name="plus_500">+500</string>
    <string name="plus_1000">+1000</string>
    <string name="title_activity_login_flow">LoginFlowActivity</string>
    <string name="err_enter_password">Please enter password first.</string>
    <string name="text_show_more">Show More</string>
    <string name="text_show_less">Show Less</string>
    <string name="valid_amount_msg">Please enter valid amount</string>
    <string name="less_amount_msg">Amount to be added to wallet must not be less than the pay
        amount.
    </string>
    <string name="text_my_banks">My Banks</string>
    <string name="text_no_saved_cards">You have no saved Cards.</string>
    <string name="text_manage_cards">Manage Cards</string>
    <string name="text_loading_wallet">Getting wallet details</string>
    <string name="err_card_no">Card number you entered is not correct.</string>
    <string name="string_alphabets_with_space">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
        "
    </string>
    <string name="string_alphanumeric">
        "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
    </string>
    <string name="number_digits">0123456789</string>
    <string name="bank_caution">Our system is seeing an increased failure rate with this bank. Tread
        with caution&#8230;
    </string>
    <string name="hint_account_holder_name">Account Holder Name</string>
    <string name="hint_account_number">Account Number</string>
    <string name="hint_ifsc_code">IFSC Code</string>
    <string name="err_account_holder_name_empty">Please enter Account holder name.</string>
    <string name="err_account_number_empty">Please enter your account number.</string>
    <string name="err_ifsc_code_empty">Please enter the IFSC code of your bank.</string>
    <string name="err_ifsc_code_wrong">Please enter correct IFSC code.</string>
    <string name="text_withdraw_success">Withdrawal In Progress</string>
    <string name="text_withdraw_failure">Withdrawal Failure</string>
    <string name="text_withdraw_success_message">
        <a href="http://www.citruspay.com/citruscashfaqs-lite.html#Withdrawals">More Info about
            withdrawals.
        </a>
    </string>
    <string name="getting_account_info">Getting account info</string>
    <string name="text_saved_options">My Saved Options</string>
    <string name="err_invalid_card">The card number you entered is invalid.</string>
    <string name="transaction_complete">Your trasaction has been completed, please start a fresh
        transaction.
    </string>
    <string name="err_email_empty">Please enter a valid Email</string>
    <string name="err_phone_empty">Please enter a valid phone no.</string>
    <string name="err_amount_empty">Please enter a valid non zero amount</string>
    <string name="text_select_bank">SELECT A BANK</string>
    <string name="text_balance">balance</string>
    <string name="text_searching_user">Searching User&#8230;</string>
    <string name="hint_create_citrus_pass">CREATE CITRUS PASSWORD</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>

</resources>
