<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/selector_citrus_card"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp16"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingTop="@dimen/dp16"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_credit_debit"
        android:textAllCaps="true"
        android:textColor="@color/citrus_label_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_pay_with_card_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_list_item"
        android:text="@string/text_credit_debit_promotion"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/citrus_separator_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_net_banking"
        android:textAllCaps="true"
        android:textColor="@color/citrus_label_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/other_banks_text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_list_item"
        android:text="@string/text_other_banks"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp" />

</LinearLayout>