<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="@dimen/dp8"
android:background="@drawable/citrus_card_background"
android:orientation="vertical"
android:padding="@dimen/dp16">
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <EditText
        android:id="@+id/email_otp_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email_otp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/citrus_text_color"
        android:textColorHint="@color/citrus_label_color"
        android:textSize="17sp"
        />
</android.support.design.widget.TextInputLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:visibility="gone"
    android:text="@string/text_email_otp_sent"
    android:textColor="@color/citrus_text_color_light"
    android:textSize="12sp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/citrus_text_color"
    android:textSize="15sp"
    android:text="@string/text_or"
    android:visibility="gone"
    android:layout_marginTop="5dp"
    android:layout_gravity="center_horizontal"
    />
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/citrus_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_create_citrus_pass"
        android:inputType="textPassword"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textColor="@color/citrus_text_color"
        android:textColorHint="@color/citrus_label_color"
        android:textSize="17sp"
        android:drawablePadding="@dimen/dp10"
        android:drawableRight="@drawable/ic_visibility_on"
        />
</android.support.design.widget.TextInputLayout>
</LinearLayout>