<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:background="@color/citrus_app_background_color"
            tools:context="com.citrus.sdk.ui.fragments.GetAccountDetailFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:clickable="true"
                  android:paddingTop="@dimen/dp16">
                  android:paddingBottom="@dimen/dp16">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/owner_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8">
            <EditText
                android:id="@+id/owner_name_et"
                android:hint="@string/hint_account_holder_name"
                android:textColor="@color/citrus_text_color"
                android:textColorHint="@color/citrus_label_color"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="@string/string_alphabets_with_space"
                android:inputType="textCapWords|textNoSuggestions"
                android:maxLength="70"
                android:singleLine="true"
                android:textAllCaps="true"
                app:textStyle="@integer/ROBOTO_MEDIUM"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_no_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_below="@id/card_type_radio_group">
            <EditText
                android:id="@+id/account_no_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_account_number"
                android:inputType="number"
                android:digits="@string/number_digits"
                android:nextFocusDown="@+id/card_name_et"
                android:singleLine="true"
                android:textColor="@color/citrus_text_color"
                android:textColorHint="@color/citrus_label_color"
                android:textSize="17sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ifc_code_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8">
            <EditText
                android:id="@+id/ifsc_code_et"
                android:hint="@string/hint_ifsc_code"
                android:textColor="@color/citrus_text_color"
                android:textColorHint="@color/citrus_label_color"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="@string/string_alphanumeric"
                android:inputType="textCapWords|textNoSuggestions"
                android:maxLength="70"
                android:singleLine="true"
                android:textAllCaps="true"
                app:textStyle="@integer/ROBOTO_MEDIUM"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8">
            <EditText
                android:id="@+id/amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_amount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/citrus_text_color"
                android:textColorHint="@color/citrus_label_color"
                android:textSize="17sp"
                />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.citrus.sdk.ui.widgets.CitrusButton
                android:id="@+id/button_withdraw_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/dp15"
                android:gravity="center"
                android:text="@string/text_withdraw_money"
                android:textAllCaps="true"
                android:textColor="@color/citrus_white"
                android:textSize="14sp"
                app:textStyle="@integer/OPENSANS_REGULAR"/>
        </RelativeLayout>
    </LinearLayout>



</ScrollView>
