<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:background="@drawable/citrus_card_background"
        android:orientation="vertical"
        android:padding="@dimen/dp16">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_enter_otp_mobile"
            android:textColor="@color/citrus_text_color"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mobile_otp_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_mobile_otp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/citrus_text_color"
                    android:textColorHint="@color/citrus_label_color"
                    android:textSize="17sp"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/resend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:text="@string/text_resend_otp"
                android:textAllCaps="true"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_otp_auto_populated"
            android:textColor="@color/citrus_amount_color"
            android:textSize="12sp"/>
    </LinearLayout>